--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </header>
   <main>
     <div class="logo-placeholder">
-      <img src="assets/logo.png" alt="LifeConnect Logo" class="logo">
+      <img src="images/logo.png" alt="LifeConnect Logo" class="logo">
     </div>
     <form id="login-form">
       <label for="login-username">Username:</label>
