--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </header>
     <main>
       <div class="logo-placeholder">
-        <img src="images/logo.png" alt="LifeConnect Logo" class="logo">
+        <img src="images/logo.png" alt="LifeConnect Logo" class="logo" style="width: 200px; height: auto;">
       </div>
       <form id="signup-form" onsubmit="return validatePassword()">
         <label for="name">Name:</label>
