--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Life Connect</title>
-  <link rel="website icon" href="images/logo.png" type="png" style="width: 100px; height: auto;>
+  <link rel="website icon" href="images/logo.png" type="png">
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
   <script type="module" src="firebaseauth.js"></script>
